--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Programming Portfolio</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css" type="text/css">
+        <link rel="stylesheet" href="Eitsirch.github.io/CSS/style.css" type="text/css">
         <link rel="icon" href="images/Starfruit.png" type="image/jpg" sizes="16x16">
     </head>
 <body>
@@ -22,15 +22,15 @@
                  <h2>Projects</h2>
                  <div class="grid">
                     <div class="item">
-                        <img src="images/chickenglassestwo.png" alt="Chicken">
+                        <img src="Eitsirch.github.io/images/chickenglassestwo.png" alt="Chicken">
                         <a href="PlotPlanner/home.html">Plot Planner Website </a>
                     </div>
                     <div class="item">
-                        <img src="images/soon.png" alt="SQL">
+                        <img src="Eitsirch.github.io/images/soon.png" alt="SQL">
                         <a href="friendlies.html">Coming Soon: SQL/PL Assignment</a>
                     </div>
                     <div class="item">
-                     <img src="images/soon.png" alt="Python"> 
+                     <img src="Eitsirch.github.io/images/soon.png" alt="Python"> 
                         <a href="missions.html">Coming Soon: Codecademy Python Project</a>
                     </div>
                  </div>
