--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
                  <h2>Projects</h2>
                  <div class="grid">
                     <div class="item">
-                        <img src="images/chickenglassestwo.png" alt="Chicken">
+                        <img src="IMAGES/chickenglassestwo.png" alt="Chicken">
                         <a href="PlotPlanner/home.html">Plot Planner Website </a>
                     </div>
                     <div class="item">
-                        <img src="images/soon.png" alt="SQL">
+                        <img src="IMAGES/soon.png" alt="SQL">
                         <a href="friendlies.html">Coming Soon: SQL/PL Assignment</a>
                     </div>
                     <div class="item">
-                     <img src="images/soon.png" alt="Python"> 
+                     <img src="IMAGES/soon.png" alt="Python"> 
                         <a href="missions.html">Coming Soon: Codecademy Python Project</a>
                     </div>
                  </div>
