--- a/PlotPlanner/cropcalculator.html
+++ b/PlotPlanner/cropcalculator.html
@@ -17,7 +17,7 @@
             <header> 
              
             <nav>
-                <a href="Eitsirch.github.io/index.html">Portfolio</a>
+                <a href="https://eitsirch.github.io/index.html">Portfolio</a>
                 <a href="home.html">Website Home</a>
                 <a href="cropcalculator.html">Plot Planner</a> 
                 <a href="https://stardewvalleywiki.com/Stardew_Valley_Wiki">Stardew Valley Wiki</a>
